--- a/rpa-certificates-of-free-sale/Data Workflows/TraderCRM/EnterLoadingDetails.xaml
+++ b/rpa-certificates-of-free-sale/Data Workflows/TraderCRM/EnterLoadingDetails.xaml
@@ -8,7 +8,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1012,830</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1319,830</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>EnterLoadingDetails_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="21">
@@ -530,15 +530,15 @@
                                                                                                                               <av:PointCollection x:Key="ConnectorLocation">410,2905.02 410,2955.02</av:PointCollection>
                                                                                                                             </scg:Dictionary>
                                                                                                                           </sap:WorkflowViewStateService.ViewState>
-                                                                                                                          <TryCatch DisplayName="Try EnterReferenceDetails" sap:VirtualizedContainerService.HintSize="457,606" sap2010:WorkflowViewState.IdRef="TryCatch_1">
+                                                                                                                          <TryCatch DisplayName="Try GetCRMReference" sap:VirtualizedContainerService.HintSize="439,606" sap2010:WorkflowViewState.IdRef="TryCatch_1">
                                                                                                                             <TryCatch.Try>
-                                                                                                                              <Sequence sap:VirtualizedContainerService.HintSize="419,379" sap2010:WorkflowViewState.IdRef="Sequence_3">
+                                                                                                                              <Sequence sap:VirtualizedContainerService.HintSize="401,379" sap2010:WorkflowViewState.IdRef="Sequence_3">
                                                                                                                                 <sap:WorkflowViewStateService.ViewState>
                                                                                                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                                                                                                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                                                                                                   </scg:Dictionary>
                                                                                                                                 </sap:WorkflowViewStateService.ViewState>
-                                                                                                                                <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke EnterReferenceDetails" sap:VirtualizedContainerService.HintSize="377,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Data Workflows\TraderCRM\EnterReferenceDetails.xaml">
+                                                                                                                                <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke EnterReferenceDetails" sap:VirtualizedContainerService.HintSize="359,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Data Workflows/TraderCRM/GetCRMReference.xaml">
                                                                                                                                   <ui:InvokeWorkflowFile.Arguments>
                                                                                                                                     <InArgument x:TypeArguments="ui:Browser" x:Key="IN_browserCRM">
                                                                                                                                       <mva:VisualBasicValue x:TypeArguments="ui:Browser" ExpressionText="IN_browserCRM" />
@@ -546,9 +546,6 @@
                                                                                                                                     <OutArgument x:TypeArguments="x:String" x:Key="OUT_strReferenceNumber">
                                                                                                                                       <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="OUT_strReferenceNumber" />
                                                                                                                                     </OutArgument>
-                                                                                                                                    <InArgument x:TypeArguments="x:String" x:Key="IN_strFilePath">
-                                                                                                                                      <Literal x:TypeArguments="x:String">filepath.doc</Literal>
-                                                                                                                                    </InArgument>
                                                                                                                                   </ui:InvokeWorkflowFile.Arguments>
                                                                                                                                   <sap:WorkflowViewStateService.ViewState>
                                                                                                                                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -556,7 +553,7 @@
                                                                                                                                     </scg:Dictionary>
                                                                                                                                   </sap:WorkflowViewStateService.ViewState>
                                                                                                                                 </ui:InvokeWorkflowFile>
-                                                                                                                                <Assign DisplayName="Assign retry counter" sap:VirtualizedContainerService.HintSize="377,60" sap2010:WorkflowViewState.IdRef="Assign_1">
+                                                                                                                                <Assign DisplayName="Assign retry counter" sap:VirtualizedContainerService.HintSize="359,60" sap2010:WorkflowViewState.IdRef="Assign_1">
                                                                                                                                   <Assign.To>
                                                                                                                                     <OutArgument x:TypeArguments="x:Int32">[intRetryCounter]</OutArgument>
                                                                                                                                   </Assign.To>
@@ -564,7 +561,7 @@
                                                                                                                                     <InArgument x:TypeArguments="x:Int32">0</InArgument>
                                                                                                                                   </Assign.Value>
                                                                                                                                 </Assign>
-                                                                                                                                <Assign DisplayName="Assign ExceptionCurrent" sap:VirtualizedContainerService.HintSize="377,60" sap2010:WorkflowViewState.IdRef="Assign_2">
+                                                                                                                                <Assign DisplayName="Assign ExceptionCurrent" sap:VirtualizedContainerService.HintSize="359,60" sap2010:WorkflowViewState.IdRef="Assign_2">
                                                                                                                                   <Assign.To>
                                                                                                                                     <OutArgument x:TypeArguments="s:Exception">[exceptionCurrent]</OutArgument>
                                                                                                                                   </Assign.To>
@@ -575,7 +572,7 @@
                                                                                                                               </Sequence>
                                                                                                                             </TryCatch.Try>
                                                                                                                             <TryCatch.Catches>
-                                                                                                                              <Catch x:TypeArguments="s:Exception" sap:VirtualizedContainerService.HintSize="423,21" sap2010:WorkflowViewState.IdRef="Catch`1_1">
+                                                                                                                              <Catch x:TypeArguments="s:Exception" sap:VirtualizedContainerService.HintSize="405,21" sap2010:WorkflowViewState.IdRef="Catch`1_1">
                                                                                                                                 <sap:WorkflowViewStateService.ViewState>
                                                                                                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                                                                                                     <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -599,10 +596,7 @@
                                                                                                                             </TryCatch.Catches>
                                                                                                                           </TryCatch>
                                                                                                                           <FlowStep.Next>
-                                                                                                                            <FlowDecision x:Name="__ReferenceID34" DisplayName="Continue?" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowDecision_16">
-                                                                                                                              <FlowDecision.Condition>
-                                                                                                                                <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="exceptionCurrent is Nothing" />
-                                                                                                                              </FlowDecision.Condition>
+                                                                                                                            <FlowDecision x:Name="__ReferenceID34" Condition="[exceptionCurrent is Nothing]" DisplayName="Continue?" sap:VirtualizedContainerService.HintSize="70,87" sap2010:WorkflowViewState.IdRef="FlowDecision_16">
                                                                                                                               <sap:WorkflowViewStateService.ViewState>
                                                                                                                                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                                                                                                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
